--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MyProfile</title>
+  <title>Tak's Profile</title>
   <base href="/">
   <!-- Google Fots -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
